--- a/portlets/payroll-email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/payroll-email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1,8 +1,10 @@
 subscription-email=Sender Email
 subscription-subject=Subject
 subscription-template=Template
-template-help-message=TEMP
 upload-title=Upload the file with the information
 data-mapping=Data Mapping
 email-config=Email Configuration
 no-columns-were-found=No columns found
+name-csv=Name in CSV
+use-html=Use in HTML
+contains-email=Contains Email
