--- a/portlets/payroll-email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/payroll-email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1,6 +1,7 @@
 subscription-email=Sender Email
 subscription-subject=Subject
 subscription-template=Template
+email-template=Template
 upload-title=Upload the file with the information
 data-mapping=Data Mapping
 email-config=Email Configuration
@@ -8,3 +9,12 @@ no-columns-were-found=No columns found
 name-csv=Name in CSV
 use-html=Use in HTML
 contains-email=Contains Email
+save-template=Save Template
+show-preview=Show Preview
+template-name=Template Name
+preview=Preview
+label-from=From:
+label-to=To:
+label-subject=Subject:
+continue-button=Continue
+send-button=Send
