Template basic crud

--- a/portlets/email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -18,3 +18,12 @@ label-to=To:
 label-subject=Subject:
 continue-button=Continue
 send-button=Send
+template-manager=Template Manager
+manage-templates=Manage Templates
+add-template=Add Template
+no-templates=No templates added
+add-templates=Add template
+edit-template=Edit template
+name=Name
+value=Value
+create-date=Creation Date
