Basic crud using editor

--- a/portlets/email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -20,7 +20,7 @@ continue-button=Continue
 send-button=Send
 template-manager=Template Manager
 manage-templates=Manage Templates
-add-template=Add Template
+template=Template
 no-templates=No templates added
 add-templates=Add template
 edit-template=Edit template
