Added template crud in email configuration

--- a/portlets/email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/portlets/email-sender-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -21,9 +21,14 @@ send-button=Send
 template-manager=Template Manager
 manage-templates=Manage Templates
 template=Template
+templates=Templates
 no-templates=No templates added
 add-templates=Add template
 edit-template=Edit template
 name=Name
 value=Value
 create-date=Creation Date
+load=Load
+save=Save New
+update=Update
+delete=Delete
